kubernetes/app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: gcr.io/cog01k24f1ea555zdv7ynzthxanz5/app2:v1
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: app2-data
          mountPath: /data
      volumes:
      - name: app2-data
        persistentVolumeClaim:
          claimName: app2-pvc
