kubernetes/app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  selector:
    app: app2
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
